--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,7 @@ steps:
   args: ["run", "create-env"]
   env:
     - 'TEST_ENV_VAR=${_TEST_ENV_VAR}'
+    - 'GOOGLE_MAPS_API_KEY=${_GOOGLE_MAPS_API_KEY}'
 - name: node:16.0.0
   entrypoint: npm
   args: ["run", "build"]
