Google Maps/Notion SDK Integration + Map data visualization

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,9 @@ steps:
   env:
     - 'TEST_ENV_VAR=${_TEST_ENV_VAR}'
     - 'GOOGLE_MAPS_API_KEY=${_GOOGLE_MAPS_API_KEY}'
+    - 'NOTION_TOKEN=${_NOTION_TOKEN}'
+    - 'FAMILY_NOTION_DATABASE_ID=${_FAMILY_NOTION_DATABASE_ID}'
+    - 'FAMILY_NOTION_PAGE_ID'=${_FAMILY_NOTION_PAGE_ID}'
 - name: node:16.0.0
   entrypoint: npm
   args: ["run", "build"]
