--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "@emotion/styled": "^11.11.0",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autosuggest-highlight": "^3.3.4",
     "google-map-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
