--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
+    "imagemin": "^8.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
