--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "autosuggest-highlight": "^3.3.4",
     "google-map-react": "^2.2.1",
     "react": "^17.0.2",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
