--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/cli": "^5.7.0",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/ios": "^5.7.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@googlemaps/markerclusterer": "^2.5.3",
@@ -17,6 +20,8 @@
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
+    "react-native-actions-sheet": "^0.9.2",
+    "react-native-gesture-handler": "^2.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
