--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^7.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.3.4",
+    "dayjs": "^1.11.11",
     "google-map-react": "^2.2.1",
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
