--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "node ./build.js",
     "start": "node ./index.js",
     "start-dev-server": "nodemon index.js",
-    "start-dev-client": "cd frontend && npm start",
+    "start-dev-client": "cd frontend && set HTTPS=true&& npm start",
     "start-dev": "concurrently \"npm run start-dev-server\" \"npm run start-dev-client\""
   },
   "author": "",
