--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.3",
+    "emoji-picker-react": "^4.9.2",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "imagemin": "^8.0.1",
