--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "autosuggest-highlight": "^3.3.4",
     "dayjs": "^1.11.11",
     "google-map-react": "^2.2.1",
+    "google-maps-utility-library-v3-infobox": "^1.1.14",
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
