--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autosuggest-highlight": "^3.3.4",
     "dayjs": "^1.11.11",
+    "fast-deep-equal": "^3.1.3",
     "google-map-react": "^2.2.1",
     "google-maps-utility-library-v3-infobox": "^1.1.14",
     "react": "^17.0.2",
